k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: todo-app
  namespace: todo-app

spec:
  replicas: 1

  selector:
    matchLabels:
      app: todo-app

  template:
    metadata:
      name: todo-app
      namespace: todo-app
      labels:
        app: todo-app

    spec:
      containers:
      - name: todo-app

        image: kishangendle/smart-todo-app:latest

        ports:
        - containerPort: 5000
