k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: todo-service
  namespace: todo-app

spec:

  selector:
    app: todo-app

  ports:
  - port: 5000
    targetPort: 5000
