k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: todo-ingress
  namespace: todo-app

spec:

  rules:
  - http:
      paths:
      - pathType: Prefix

        path: /
        backend:
          service:
            name: todo-service

            port:
              number: 5000
